--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="src/css/home.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
     <!-- -->
-    <link rel="preload" as="image" href="GTimer.png" />
+    <link rel="preload" as="image" href="GTimer.jpg" />
     <link rel="preload" as="image" href="GSpark.png" />
     <link rel="preload" as="image" href="MPoint.png" />
-    <link rel="preload" as="image" href="GHouse.png" />
-    <link rel="preload" as="image" href="MLearn.png" />
-    <link rel="preload" as="image" href="DTech.png" />
+    <link rel="preload" as="image" href="DHouse.png" />
+    <link rel="preload" as="image" href="MLearn.jpg" />
+    <link rel="preload" as="image" href="DTech.jpg" />
     <link rel="preload" as="image" href="Brand.png" />
-
+    <link rel="preload" as="image" href="Back.jpg" />
     <!-- -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yoswel Badilla Dev</title>
