--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="src/css/general.css" />
     <link rel="stylesheet" href="src/css/modal.css" />
     <link rel="stylesheet" href="src/css/skills.css" />
+    <link rel="stylesheet" href="src/css/cards.css" />
     <link rel="stylesheet" href="src/css/home.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
     <!-- -->
