--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <!--CSS-->
-    <link rel="stylesheet" href="src/css/general.css" />
-    <link rel="stylesheet" href="src/css/modal.css" />
-    <link rel="stylesheet" href="src/css/skills.css" />
-    <link rel="stylesheet" href="src/css/cards.css" />
-    <link rel="stylesheet" href="src/css/home.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
-    <!-- -->
-    <link rel="preload" as="image" href="GTimer.jpg" />
-    <link rel="preload" as="image" href="GSpark.png" />
-    <link rel="preload" as="image" href="MPoint.png" />
-    <link rel="preload" as="image" href="DHouse.png" />
-    <link rel="preload" as="image" href="MLearn.jpg" />
-    <link rel="preload" as="image" href="DTech.jpg" />
-    <link rel="preload" as="image" href="Brand.png" />
-    <link rel="preload" as="image" href="Back.jpg" />
-    <!-- -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yoswel Badilla Dev</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <!--CSS-->
+        <link rel="stylesheet" href="src/css/general.css" />
+        <link rel="stylesheet" href="src/css/modal.css" />
+        <link rel="stylesheet" href="src/css/skills.css" />
+        <link rel="stylesheet" href="src/css/cards.css" />
+        <link rel="stylesheet" href="src/css/home.css" />
+        <!-- -->
+        <link rel="preload" as="image" href="/GTimer.jpg" />
+        <link rel="preload" as="image" href="/GSpark.png" />
+        <link rel="preload" as="image" href="/MPoint.png" />
+        <link rel="preload" as="image" href="/DHouse.png" />
+        <link rel="preload" as="image" href="/MLearn.jpg" />
+        <link rel="preload" as="image" href="/DTech.jpg" />
+        <link rel="preload" as="image" href="/Brand.png" />
+        <link rel="preload" as="image" href="/Back.webp" />
+        <link rel="preload" as="image" href="/Back.webp" />
+        <!-- -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Yoswel Badilla Dev</title>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
