A new design in peoject cards and new border radius

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link rel="preload" as="image" href="/DTech.jpg" />
         <link rel="preload" as="image" href="/Brand.png" />
         <link rel="preload" as="image" href="/Back.webp" />
-        <link rel="preload" as="image" href="/Back.webp" />
+        <link rel="preload" as="image" href="/darkIcons.webp" />
         <!-- -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Yoswel Badilla Dev</title>
