Grizzly Spark was remodeled

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="src/css/home.css" />
         <!-- -->
         <link rel="preload" as="image" href="/GTimer.jpg" />
-        <link rel="preload" as="image" href="/GSpark.png" />
+        <link rel="preload" as="image" href="/NewSpark.webp" />
         <link rel="preload" as="image" href="/MPoint.png" />
         <link rel="preload" as="image" href="/DHouse.png" />
         <link rel="preload" as="image" href="/MLearn.jpg" />
