A new design was added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="/Dev.svg" />
         <!--CSS-->
         <link rel="stylesheet" href="src/css/general.css" />
         <link rel="stylesheet" href="src/css/modal.css" />
@@ -16,12 +16,11 @@
         <link rel="preload" as="image" href="/DHouse.png" />
         <link rel="preload" as="image" href="/MLearn.jpg" />
         <link rel="preload" as="image" href="/DTech.jpg" />
-        <link rel="preload" as="image" href="/Brand.png" />
-        <link rel="preload" as="image" href="/Back.webp" />
-        <link rel="preload" as="image" href="/darkIcons.webp" />
+        <link rel="preload" as="image" href="/Yo.png" />
+        <link rel="preload" as="image" href="/fflurry.svg" />
         <!-- -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Yoswel Badilla Dev</title>
+        <title>Yoswel Badilla - Ingeniero informático y conocedor del tema</title>
     </head>
     <body>
         <div id="root"></div>
