A new design add cards contact

--- a/index.html
+++ b/index.html
@@ -4,23 +4,29 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/Dev.svg" />
         <!--CSS-->
+        <link rel="preload" href="src/assets//font/ChakraPetch-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+        <link rel="preload" href="src/assets//font/ChakraPetch-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+        <link rel="preload" href="src/assets//font/ChakraPetch-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+        <!-- -->
         <link rel="stylesheet" href="src/css/general.css" />
         <link rel="stylesheet" href="src/css/modal.css" />
         <link rel="stylesheet" href="src/css/skills.css" />
         <link rel="stylesheet" href="src/css/cards.css" />
         <link rel="stylesheet" href="src/css/home.css" />
         <!-- -->
+        <link rel="preload" as="image" href="/Yo.png" />
+        <link rel="preload" as="image" href="/fflurry.svg" />
+        <link rel="preload" as="image" href="/YoSmall.png" />
         <link rel="preload" as="image" href="/GTimer.jpg" />
         <link rel="preload" as="image" href="/GSpark2.jpg" />
         <link rel="preload" as="image" href="/MPoint.png" />
         <link rel="preload" as="image" href="/DHouse.png" />
         <link rel="preload" as="image" href="/MLearn.jpg" />
         <link rel="preload" as="image" href="/DTech.jpg" />
-        <link rel="preload" as="image" href="/Yo.png" />
-        <link rel="preload" as="image" href="/fflurry.svg" />
         <!-- -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Yoswel Badilla - Ingeniero informático y conocedor del tema</title>
+        <!-- -->
     </head>
     <body>
         <div id="root"></div>
