--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/Dev.svg" />
         <!--CSS-->
-        <link rel="preload" href="src/assets//font/ChakraPetch-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-        <link rel="preload" href="src/assets//font/ChakraPetch-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-        <link rel="preload" href="src/assets//font/ChakraPetch-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+        <link rel="preload" href="/src//assets/fonts/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+        <link rel="preload" href="/src//assets/fonts/Poppins-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+        <link rel="preload" href="/src//assets/fonts/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+        <link rel="preload" href="/src//assets/fonts/Poppins-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+        <link rel="preload" href="/src//assets/fonts/Poppins-ExtraBold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
         <!-- -->
         <link rel="stylesheet" href="src/css/general.css" />
         <link rel="stylesheet" href="src/css/modal.css" />
