--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
         <link rel="stylesheet" href="src/css/home.css" />
         <!-- -->
         <link rel="preload" as="image" href="/Yo.png" />
-        <link rel="preload" as="image" href="/fflurry.svg" />
-        <link rel="preload" as="image" href="/YoSmall.png" />
-        <link rel="preload" as="image" href="/GTimer.jpg" />
+        <link rel="preload" as="image" href="/Lines.svg" />
         <link rel="preload" as="image" href="/GSpark2.jpg" />
-        <link rel="preload" as="image" href="/MPoint.png" />
+        <link rel="preload" as="image" href="/GTimer.jpg" />
         <link rel="preload" as="image" href="/DHouse.png" />
         <link rel="preload" as="image" href="/MLearn.jpg" />
-        <link rel="preload" as="image" href="/DTech.jpg" />
         <!-- -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Yoswel Badilla - Ingeniero informático y conocedor del tema</title>
