A new hacker design

--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
         <link rel="icon" type="image/svg+xml" href="/Dev.svg" />
         <!--CSS-->
         <link rel="preload" href="/src//assets/fonts/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-        <link rel="preload" href="/src//assets/fonts/Poppins-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-        <link rel="preload" href="/src//assets/fonts/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-        <link rel="preload" href="/src//assets/fonts/Poppins-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-        <link rel="preload" href="/src//assets/fonts/Poppins-ExtraBold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
         <!-- -->
         <link rel="stylesheet" href="src/css/general.css" />
         <link rel="stylesheet" href="src/css/modal.css" />
@@ -16,12 +12,9 @@
         <link rel="stylesheet" href="src/css/cards.css" />
         <link rel="stylesheet" href="src/css/home.css" />
         <!-- -->
-        <link rel="preload" as="image" href="/Yo.png" />
-        <link rel="preload" as="image" href="/Lines.svg" />
-        <link rel="preload" as="image" href="/GSpark2.jpg" />
-        <link rel="preload" as="image" href="/GTimer.jpg" />
-        <link rel="preload" as="image" href="/DHouse.png" />
-        <link rel="preload" as="image" href="/MLearn.jpg" />
+        <link rel="preload" as="image" type="image/webp" href="/Cyber.webp" />
+        <link rel="preload" as="image" type="image/png" href="/Yo.png" />
+        <link rel="preload" as="image" type="image/png" href="/Lines.svg" />
         <!-- -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Yoswel Badilla - Ingeniero informático y conocedor del tema</title>
