--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/Dev.svg" />
         <!--CSS-->
-        <link rel="preload" href="/src//assets/fonts/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+        <link rel="preload" href="/src//assets/fonts/RedHatDisplay-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+        <link rel="preload" href="/src//assets/fonts/RedHatDisplay-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+        <link rel="preload" href="/src//assets/fonts/RedHatDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
         <!-- -->
         <link rel="stylesheet" href="src/css/general.css" />
         <link rel="stylesheet" href="src/css/modal.css" />
-        <link rel="stylesheet" href="src/css/skills.css" />
         <link rel="stylesheet" href="src/css/cards.css" />
         <link rel="stylesheet" href="src/css/home.css" />
+        <link rel="stylesheet" href="src/css/sections.css" />
         <!-- -->
         <link rel="preload" as="image" type="image/webp" href="/Cyber.webp" />
         <link rel="preload" as="image" type="image/png" href="/Yo.png" />
