New skills in project was added

--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
         <link rel="stylesheet" href="src/css/sections.css" />
         <!-- -->
         <link rel="preload" as="image" type="image/webp" href="/Cyber.webp" />
-        <link rel="preload" as="image" type="image/png" href="/Yo.png" />
-        <link rel="preload" as="image" type="image/png" href="/Lines.svg" />
+        <link rel="preload" as="image" type="image/svg" href="/World.svg" />
+        <link rel="preload" as="image" type="image/svg" href="/Lines.svg" />
+        <link rel="preload" as="image" type="image/png" href="/6.png" />
         <!-- -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Yoswel Badilla - Ingeniero informático y conocedor del tema</title>
+        <title>YoswelBadilla (Vishok) - Ingeniero informático y conocedor del tema</title>
         <!-- -->
     </head>
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
-</html>
+    </html>
