--- a/index.html
+++ b/index.html
@@ -3,25 +3,23 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/Dev.svg" />
-        <!--CSS-->
         <link rel="preload" href="/src/assets/fonts/RedHatDisplay-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
         <link rel="preload" href="/src/assets/fonts/RedHatDisplay-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
         <link rel="preload" href="/src/assets/fonts/RedHatDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-        <!-- -->
-        <link rel="stylesheet" href="src/css/general.css" />
-        <link rel="stylesheet" href="src/css/modal.css" />
-        <link rel="stylesheet" href="src/css/cards.css" />
-        <link rel="stylesheet" href="src/css/home.css" />
-        <link rel="stylesheet" href="src/css/sections.css" />
-        <!-- -->
-        <link rel="preload" as="image" type="image/webp" href="/Cyber.webp" />
-        <link rel="preload" as="image" type="image/svg" href="/World.svg" />
-        <link rel="preload" as="image" type="image/svg" href="/Lines.svg" />
-        <link rel="preload" as="image" type="image/png" href="/6.png" />
-        <!-- -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>YoswelBadilla (Vishok) - Ingeniero informático y conocedor del tema</title>
-        <!-- -->
+        <link rel="stylesheet" href="src/css/general.css" media="print" onload="this.media='all'" />
+        <link rel="stylesheet" href="src/css/cards.css" media="print" onload="this.media='all'" />
+        <link rel="stylesheet" href="src/css/home.css" media="print" onload="this.media='all'" />
+        <link rel="stylesheet" href="src/css/sections.css" media="print" onload="this.media='all'" />
+        <link rel="preload" as="image" type="image/webp" href="/Cyber.webp" alt="Me profile photo in hacking competition" />
+        <link rel="preload" as="image" type="image/webp" href="/6.webp" alt="Preview about GrizzlySpark hacking tool" />
+        <title>Yoswel Badilla (Vishok) - Computer Engineer and Pentester</title>
+        <meta name="description" content="Computer Engineer and Penetration Tester specializing in cybersecurity and programming. Expert in ethical hacking, web development, and software solutions.">
+        <meta name="keywords" content="cybersecurity, penetration testing, web development, ethical hacking, software solutions">
+        <meta name="author" content="Yoswel Badilla">
+        <meta property="og:title" content="Yoswel Badilla (Vishok) - Computer Engineer and Pentester">
+        <meta property="og:description" content="Computer Engineer and Penetration Tester specializing in cybersecurity and programming. Expert in ethical hacking, web development, and software solutions.">
+        <meta property="og:image" content="https://tusitio.com/imagen.jpg">
+        <meta property="og:url" content="https://yosweldev.vercel.app">
     </head>
     <body>
         <div id="root"></div>
