--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
         <meta name="author" content="Yoswel Badilla">
         <meta property="og:title" content="Yoswel Badilla (Vishok) - Computer Engineer and Pentester">
         <meta property="og:description" content="Computer Engineer and Penetration Tester specializing in cybersecurity and programming. Expert in ethical hacking, web development, and software solutions.">
-        <meta property="og:image" content="/public/Yo.png">
+        <meta property="og:image" content="/Yo.png">
         <meta property="og:url" content="https://yosweldev.vercel.app">
 
-        <link rel="preload" href="/src/assets/fonts/RedHatDisplay-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-        <link rel="preload" href="/src/assets/fonts/RedHatDisplay-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-        <link rel="preload" href="/src/assets/fonts/RedHatDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-        <link rel="preload" href="/Cyber.webp" alt="Me profile photo in hacking competition" as="image" type="image/webp" />
-        <link rel="preload" href="/6.webp" alt="Preview about GrizzlySpark hacking tool" as="image" type="image/webp" />
+        <link rel="preload" href="/font/RedHatDisplay-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+        <link rel="preload" href="/font/RedHatDisplay-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+        <link rel="preload" href="/font/RedHatDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
         
         <link rel="stylesheet" href="src/css/general.css" media="print" onload="this.media='all'" />
         <link rel="stylesheet" href="src/css/cards.css" media="print" onload="this.media='all'" />
