--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="preload" href="/font/RedHatDisplay-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
         <link rel="preload" href="/font/RedHatDisplay-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
         <link rel="preload" href="/font/RedHatDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+        <link rel="preload" href="/font/ZeykoCrew.ttf" as="font" type="font/ttf" crossorigin="anonymous" />
         
         <link rel="stylesheet" href="src/css/general.css" media="print" onload="this.media='all'" />
         <link rel="stylesheet" href="src/css/cards.css" media="print" onload="this.media='all'" />
@@ -24,5 +25,6 @@
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
+        <script src="/src/main.js"></script>
     </body>
     </html>
